# agymcp

./: README.md  pyproject.toml
src/agymcp/: cli.py  server.py
src/agymcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
