[project]
name = "agymcp"
version = "0.1.0"
description = "MCP server wrapping the Antigravity CLI (agy)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.2",
]

[project.scripts]
agymcp = "agymcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agymcp"]
